= 1.0.0 / 2009-10-19
  * No Changes. Production ready!

= 0.4.0 / 2009-10-08
  * Major changes
    * Convert to use BERT gem.